# Claude-Agents-Orchestration

./: CLAUDE.md  README.md  product-library-import.csv  pyproject.toml  tsl-product-library-FINAL.docx  tsl-product-library-FINAL.txt
agent-builder/: CLAUDE.md  orchestrator.py
docs/: COMPLETE_PRODUCTS_PAGE.md  NEXT_STEPS_CHECKLIST.md  PRODUCTS_PAGE_IMPLEMENTATION.md  PRODUCT_LIBRARY_CSV_IMPORT.md  PRODUCT_LIBRARY_TEMPLATE_PAGE.md
skills-builder/: CLAUDE.md  registry.md
skills-builder/skills/code-review/: SKILL.md
skills-builder/skills/marketing-copy/: SKILL.md
skills-builder/skills/microsoft-infra-planning/: SKILL.md
skills-builder/skills/microsoft-infra-planning/references/: discovery-questionnaire.md
skills-builder/skills/web-scraping/: SKILL.md
skills-builder/skills/webflow-pages/: SKILL.md  reference.md
skills-builder/templates/: code.md  web-automation.md
web-tools/: CLAUDE.md
